force-app/main/default/objects/Defect__c/Defect__c.object-meta.xml
<CustomObject>
    <label>Defect</label>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Defect ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>