force-app/main/default/objects/Defect__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of issue, including steps to reproduce</description>
    <inlineHelpText>Description of issue, including steps to reproduce</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>