force-app/main/default/objects/Defect__c/fields/ExternalKey__c.field-meta.xml
<CustomField>
    <fullName>ExternalKey__c</fullName>
    <description>External key (e.g. Jira bug number)</description>
    <externalId>true</externalId>
    <inlineHelpText>External key (e.g. Jira bug number)</inlineHelpText>
    <label>External Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>