force-app/main/default/objects/Defect__c/fields/ReportedBy__c.field-meta.xml
<CustomField>
    <fullName>ReportedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Person who reported the defect</inlineHelpText>
    <label>Reported By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DefectsReported</relationshipName>
    <type>Lookup</type>
</CustomField>