force-app/main/default/objects/Defect__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Summary of issue</description>
    <inlineHelpText>Summary of issue</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>