force-app/main/default/objects/Defect__c/fields/TestCase__c.field-meta.xml
<CustomField>
    <fullName>TestCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source test case for this defect</description>
    <inlineHelpText>Source test case for this defect (optional)</inlineHelpText>
    <label>Test Case</label>
    <referenceTo>TestCase__c</referenceTo>
    <relationshipLabel>Defects</relationshipLabel>
    <relationshipName>Defects</relationshipName>
    <type>Lookup</type>
</CustomField>