force-app/main/default/objects/Defect__c/fields/TestRun__c.field-meta.xml
<CustomField>
    <fullName>TestRun__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source test run for this defect (optional)</description>
    <inlineHelpText>Source test run for this defect (optional)</inlineHelpText>
    <label>Test Run</label>
    <referenceTo>TestRun__c</referenceTo>
    <relationshipLabel>Defects</relationshipLabel>
    <relationshipName>Defects</relationshipName>
    <type>Lookup</type>
</CustomField>