force-app/main/default/objects/Defect__c/fields/Work__c.field-meta.xml
<CustomField>
    <fullName>Work__c</fullName>
    <description>Work that this defect is related to</description>
    <inlineHelpText>Work that this defect is related to</inlineHelpText>
    <label>Work</label>
    <referenceTo>Work__c</referenceTo>
    <relationshipLabel>Defects</relationshipLabel>
    <relationshipName>Defects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>